--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
+<!DOCTYPE html>
+<html>
+  <body onload="redirect()"></body>
 
+  <script>
+    function redirect(){
+      window.location.href("home.html");
+    }
+  </script>
+</html>
