--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <script>
     function redirect(){
-      window.location.href("home.html");
+      window.location.href = "home.html";
     }
   </script>
 </html>
