--- a/Trainer.html
+++ b/Trainer.html
@@ -35,7 +35,7 @@
         <div class="row g-4">
             <div class="col-lg-4 col-md-6">
                 <div class="card trainer-card text-center shadow-lg border-0 h-100">
-                    <img src="alex.JPG" class="card-img-top rounded-circle mx-auto mt-4" alt="Trainer Profile">
+                    <img src="alex.jpg" class="card-img-top rounded-circle mx-auto mt-4" alt="Trainer Profile">
                     <div class="card-body">
                         <h5 class="card-title">Alex Johnson</h5>
                         <p class="card-subtitle mb-3">Certified Personal Trainer (CPT)</p>
@@ -47,7 +47,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="card trainer-card text-center shadow-lg border-0 h-100">
-                    <img src="Maya.JPG" class="card-img-top rounded-circle mx-auto mt-4" alt="Trainer Profile">
+                    <img src="Maya.jpg" class="card-img-top rounded-circle mx-auto mt-4" alt="Trainer Profile">
                     <div class="card-body">
                         <h5 class="card-title">Maya Sharma</h5>
                         <p class="card-subtitle mb-3">Yoga & Pilates Instructor</p>
@@ -59,7 +59,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="card trainer-card text-center shadow-lg border-0 h-100">
-                    <img src="luke.JPEG" class="card-img-top rounded-circle mx-auto mt-4" alt="Trainer Profile">
+                    <img src="luke.jpeg" class="card-img-top rounded-circle mx-auto mt-4" alt="Trainer Profile">
                     <div class="card-body">
                         <h5 class="card-title">Javier Perez</h5>
                         <p class="card-subtitle mb-3">Zumba & Group Fitness Specialist</p>
@@ -91,4 +91,5 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
