--- a/Registration Page.html
+++ b/Registration Page.html
@@ -21,7 +21,7 @@
                     <li class="nav-item"><a class="nav-link text-dark" href="Trainer.html">Trainers</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" href="Schedule Page.html">Schedule</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" href="contact.html">Contact</a></li>
-                    <li class="nav-item"><a class="nav-link btn btn-primary text-white ms-2 px-3 rounded-pill active" aria-current="page" href="register.html">FREE Trial</a></li>
+                    <li class="nav-item"><a class="nav-link btn btn-primary text-white ms-2 px-3 rounded-pill active" aria-current="page" href="Registration Page.html">FREE Trial</a></li>
                 </ul>
             </div>
         </div>
@@ -111,4 +111,5 @@
         // ... (Your custom JavaScript validation logic here) ...
     </script>
 </body>
+
 </html>
