--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
                     <li class="nav-item"><a class="nav-link text-dark" href="Trainer.html">Trainers</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" href="Schedule Page.html">Schedule</a></li>
                     <li class="nav-item"><a class="nav-link active text-dark" aria-current="page" href="contact.html">Contact</a></li>
-                    <li class="nav-item"><a class="nav-link btn btn-primary text-white ms-2 px-3 rounded-pill" href="Registration Page.html">FREE Trial</a></li>
+                    <li class="nav-item"><a class="nav-link btn btn-primary text-white ms-2 px-3 rounded-pill active" aria-current="page" href="Registration Page.html">FREE Trial</a></li>
                 </ul>
             </div>
         </div>
@@ -129,3 +129,4 @@
 </body>
 
 </html>
+
