--- a/Schedule Page.html
+++ b/Schedule Page.html
@@ -21,7 +21,7 @@
                     <li class="nav-item"><a class="nav-link text-dark" href="Trainer.html">Trainers</a></li>
                     <li class="nav-item"><a class="nav-link active text-dark" aria-current="page" href="Schedule Page.html">Schedule</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" href="contact.html">Contact</a></li>
-                    <li class="nav-item"><a class="nav-link btn btn-primary text-white ms-2 px-3 rounded-pill" href="Registration Page.html">FREE Trial</a></li>
+                    <li class="nav-item"><a class="nav-link btn btn-primary text-white ms-2 px-3 rounded-pill active" aria-current="page" href="Registration Page.html">FREE Trial</a></li>
                 </ul>
             </div>
         </div>
@@ -94,4 +94,5 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
