--- a/home.html
+++ b/home.html
@@ -18,8 +18,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active text-dark" aria-current="page" href="home.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link text-dark" href="Trainer.html">Trainers</a></li>
+                    <li class="nav-item"><a class="nav-link text-dark" href="home.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link active text-dark" aria-current="page" href="Trainer.html">Trainers</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" href="Schedule Page.html">Schedule</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" href="contact.html">Contact</a></li>
                     <li class="nav-item"><a class="nav-link btn btn-primary text-white ms-2 px-3 rounded-pill active" aria-current="page" href="Registration Page.html">FREE Trial</a></li>
@@ -52,6 +52,7 @@
                         <i class="fas fa-hand-holding-heart fa-3x text-success mb-3"></i>
 
                         <h5 class
+
 
 
 
