--- a/home.html
+++ b/home.html
@@ -18,11 +18,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link text-dark" href="home.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link active text-dark" aria-current="page" href="Trainer.html">Trainers</a></li>
+                    <li class="nav-item"><a class="nav-link active text-dark" aria-current="page" href="home.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link text-dark" href="Trainer.html">Trainers</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" href="Schedule Page.html">Schedule</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" href="contact.html">Contact</a></li>
-                    <li class="nav-item"><a class="nav-link btn btn-primary text-white ms-2 px-3 rounded-pill active" aria-current="page" href="Registration Page.html">FREE Trial</a></li>
+                    <li class="nav-item"><a class="nav-link btn btn-primary text-white ms-2 px-3 rounded-pill" href="register.html">FREE Trial</a></li>
                 </ul>
             </div>
         </div>
@@ -42,7 +42,7 @@
         <div class="text-center mb-5">
             <h2 class="display-6 fw-bold text-primary">Find Your Class</h2>
             <p class="lead text-muted">From relaxation to high-intensity, we have a space for every goal.</p>
-			<p class="lead text-muted">"there so many way to stay fit and beauty such as Yoga, zumba and personal training"</p>
+			<p class="lead text-muted">there so many way to stay fit and beauty such as Yoga, zumba and personal training</p>
         </div>
         
         <div class="row text-center g-4">
@@ -50,9 +50,36 @@
                 <div class="card h-100 feature-card shadow-lg border-0">
                     <div class="card-body p-4">
                         <i class="fas fa-hand-holding-heart fa-3x text-success mb-3"></i>
+                        <h5 class="card-title fw-bold">Customized PT</h5>
+                        <p class="card-text text-muted">Achieve faster, targeted results with a certified one-on-one coach.</p>
+                        <a href="Trainer.html" class="btn btn-outline-info btn-sm mt-2">Meet Coaches</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
-                        <h5 class
+    <section class="py-5 bg-dark text-white text-center">
+        <div class="container">
+            <h3 class="fw-bold mb-3">Ready to Transform?</h3>
+            <p class="lead">Check out our amazing trainers and flexible schedule today!</p>
+            <a href="Trainer.html" class="btn btn-light me-3">Our Trainers</a>
+            <a href="Schedule Page.html" class="btn btn-outline-light">Class Schedule</a>
+        </div>
+    </section>
+    
+    <p class="visually-hidden">Original Content. All content and images are for demonstration purposes only.</p>
 
+    <footer class="bg-dark text-white-50 py-4 mt-auto">
+        <div class="container text-center">
+            <p class="mb-1">© 2025 FitStudio. All rights reserved.</p>
+            <div class="small">
+                <a href="register.html" class="text-white-50 mx-2">Trial Registration</a> | 
+                <a href="contact.html" class="text-white-50 mx-2">Contact Us</a>
+            </div>
+        </div>
+    </footer>
 
-
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
